Fix: Jumpy headers

--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
@@ -120,7 +120,7 @@ nav {
   .navbar {
     .navbar-nav {
       li {
-        a {
+        a, a:hover, a:visited, a:focus {
           padding: 5px;
         }
       }
